tests/negative/neg_pr1110c_map_bad_key.safe
-- Test: neg_pr1110c_map_bad_key
-- Description: `map of (K, V)` rejects disallowed key types.
-- Clause: SAFE@468cf72:docs/PR11.x-series-proposed.md#pr1110c-built-in-map-of-k-v
-- Expected: REJECT

package neg_pr1110c_map_bad_key

   var values : map of (list of integer, integer)
